--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url("./nen2.png"); /* Update the path accordingly */
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: "Arial", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.background-wrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+}
+/* App.css */
+.app-container {
+  text-align: center;
+  padding: 20px;
+}
+
+/* TimeshareList.css */
+.timeshare-list-container {
+  margin-top: 20px;
+}
+
+.timeshare-list {
+  list-style: none;
+  padding: 0;
+}
+
+/* TimeshareItem.css */
+.timeshare-item {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.timeshare-info {
+  max-width: 60%;
+}
+
+.timeshare-image {
+  max-width: 30%;
+  max-height: 100px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+/* CreateTimeshare.css */
+.create-timeshare-container {
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.create-timeshare-container label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.create-timeshare-container input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.create-timeshare-container button {
+  background-color: #4caf50;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
